<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="40dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="320dp"
                android:layout_height="102dp"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/logo"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:textColorHint="@color/dark_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:background="@drawable/underline"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:textColorHint="@color/dark_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/underline"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:textColorHint="@color/dark_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerContact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/contact"
                    android:inputType="phone"
                    android:background="@drawable/underline"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:textColorHint="@color/dark_gray"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:background="@drawable/underline"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                app:cornerRadius="5dp"
                android:backgroundTint="@color/orange"
                android:textSize="18sp"
                android:layout_marginBottom="40dp"/>
        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/underline"
        android:backgroundTint="@color/light_gray" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/singin" />
</RelativeLayout>
</ScrollView>